[package]
name = "bytekey"
version = "0.4.2"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"
description = "lexicographic sort-order preserving binary encoding"
repository = "https://github.com/danburkert/bytekey.git"
readme = "README.md"
keywords = ["encoding", "serialization", "library"]

[dependencies]
byteorder = "1"
serde = "1"
utf-8 = "0.7"

[dev-dependencies]
rand = "0.5"
serde_derive = "1"
